[tool.poetry]
name = "mtgbinderspine"
version = "0.1.0"
description = ""
authors = ["Dan Winkler <dan@danwink.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
svglib = "^1.2.1"
Pillow = "^9.0.1"
reportlab = "^3.6.8"
requests = "^2.27.1"
diskcache = "^5.4.0"
CairoSVG = "^2.5.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
mypy = "^0.941"
types-requests = "^2.27.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
